k8s/yml/buildkit.yaml
#
# 暂时不支持containerd
# https://github.com/moby/buildkit/blob/master/docs/rootless.md#known-limitations
# https://github.com/moby/buildkit/blob/master/examples/kubernetes/deployment%2Bservice.rootless.yaml
# https://github.com/moby/buildkit/tree/master/examples/kubernetes


apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: infra 
  labels:
    app: buildkitd
  name: buildkitd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: buildkitd
  template:
    metadata:
      labels:
        app: buildkitd
      annotations:
        container.apparmor.security.beta.kubernetes.io/buildkitd: unconfined
        container.seccomp.security.alpha.kubernetes.io/buildkitd: unconfined
    # see buildkit/docs/rootless.md for caveats of rootless mode
    spec:
      containers:
        - name: buildkitd
          image: moby/buildkit:v0.8.2
          args:
            - --addr
            - unix:///run/buildkit/buildkitd.sock
            - --addr
            - tcp://0.0.0.0:1234
            #- --oci-worker=false 
            #- --containerd-worker=true
          # the probe below will only work after Release v0.6.3
          readinessProbe:
            exec:
              command:
                - buildctl
                - debug
                - workers
            initialDelaySeconds: 5
            periodSeconds: 30
          # the probe below will only work after Release v0.6.3
          livenessProbe:
            exec:
              command:
                - buildctl
                - debug
                - workers
            initialDelaySeconds: 5
            periodSeconds: 30
          ports:
            - containerPort: 1234
---
apiVersion: v1
kind: Service
metadata:
  namespace: infra 
  labels:
    app: buildkitd
  name: buildkitd
spec:
  ports:
    - port: 1234
      targetPort: 1234      #Pod 的端口
      protocol: TCP
  selector:
    app: buildkitd

# kubectl delete ConfigMap tcp-services -n ingress-nginx
