k8s/yml/endpoints.yaml
# https://www.jianshu.com/p/deaa98210827

apiVersion: v1
kind: Endpoints
metadata:
  name: web-endpoint
  namespace: ns-dev-web 
subsets:
  - addresses:
      - ip: 192.168.8.120
    ports:
      - port: {}
  - addresses:
      - ip: 192.168.6.49
      - ip: 220.181.38.148 
    ports:
      - port: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: web-endpoint 
  namespace: ns-dev-web 
spec:
  ports:
    - name: all
      port: {}
    - name: mysql
      port: 3306
