k8s/yml/ns-balancer.yaml
# load balancer
#
apiVersion: v1
kind: Namespace
metadata:         
    name: k8s-balancer



---
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: k8s-balancer
    name: nginx-k8s-balancer 
    labels: 
        app: nginx 
spec:           
    replicas: 3    
    selector:      
        matchLabels:  
            app: nginx
    template:     #这是选择或创建的Pod的模板
        metadata:   #Pod的元数据
            labels:   #Pod的标签，上面的selector即选择包含标签app:nginx的Pod
                app: nginx
        spec:       #期望Pod实现的功能（即在pod中部署）
            containers:   #生成container，与docker中的container是同一种
                -   name: nginx #container的名称
                    image: nginx:1.18-alpine  #使用镜像nginx:1.18创建container，该container默认80端口可访问
                    imagePullPolicy: IfNotPresent #先本地，若无再下载
                    ports:
                        -   name: http
                            containerPort: 6443
                    volumeMounts:
                        -   mountPath: /etc/nginx/nginx.conf
                            name: nginx-config # 使用下面的配置覆盖默认配置
                            subPath: nginx.conf
                    resources:
                        limits:
                            cpu: 50m  
                            memory: 512Mi  
                        requests:
                            cpu: 25m
                            memory: 256Mi
            volumes:
                -   name: nginx-config
                    configMap:
                        name: nginx.cm

---
apiVersion: v1
kind: Service
metadata:
    namespace: k8s-balancer
    name: nginx-k8s-balancer-service  
    labels:        
        app: nginx   
spec:        
    selector:      
        app: nginx   
    ports:
        -   name: http-nginx    
            protocol: TCP        
            port: 6443            #Svc 的端口
            targetPort: 6443      #Pod 的端口
    type: ClusterIP

#
# useage
# 
# kubectl delete ns k8s-balancer
# kubectl create -f ns-balancer.yaml
#
# kubectl describe limitrange/limit-mem-cpu-per-pod -n k8s-balancer
#
# kubectl get resourcequota mem-cpu -n k8s-balancer -o yaml

# kubectl describe nodes k8s-m1

# kubectl describe svc/nginx-k8s-balancer-service     


# kubectl get pod -A -o wide
#
# kubectl run -n k8s-balancer busybox-test --rm -ti --image busybox --requests 'cpu=100m,memory=512Mi' --limits 'cpu=200m,memory=512Mi' -- /bin/sh 
# wget -q --timeout=5 nginx-demo-deployment -O -
# wget -q -T 2 -O - nginx-demo-deployment 
# wget -q -T 2 -O - 172.16.1.153:443
