k8s/yml/jenkins.yaml
# 基础架构空间infra，核心区
# Jenkins
apiVersion: v1
kind: Namespace
metadata:         
    name: infra

---
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: infra
    name: jenkins 
    labels: 
        app: jenkins 
spec:           
    replicas: 1    
    selector:      
        matchLabels:  
            app: jenkins
    template: 
        metadata: 
            labels:
                app: jenkins
        spec:
            # securityContext: 
            #     runAsUser: 1000
            #     runAsGroup: 3000
            #     fsGroup: 2000
            imagePullSecrets:
                -   name: nexus
            containers:
                -   name: jenkins
                    image: 192.168.8.71:29108/jenkins/blueocean-gradle-buildkit:1.24.5-6.5.1-0.8.2-alpine # jenkinsci/blueocean:1.24.5 # jenkins/jenkins:2.277.1-lts-alpine 
                    imagePullPolicy: Always #IfNotPresent #先本地，若无再下载
                    securityContext: 
                        runAsUser: 1000
                        runAsGroup: 3000
                    ports:
                        -   name: http
                            containerPort: 8080
                        -   name: jnlp-agent
                            containerPort: 50000
                    volumeMounts:
                        -   name: localtime
                            mountPath: /etc/localtime
                            readOnly: true
                        -   name: jenkins-data
                            mountPath: /var/jenkins_home
                        -   name: docker
                            mountPath: /var/run/docker.sock
                    resources:
                        limits:
                            cpu: "2"  
                            memory: 4Gi  
                        requests:
                            cpu: "1"
                            memory: 2Gi
                -   name: buildkitd
                    image: moby/buildkit:v0.8.2 
                    imagePullPolicy: Always
                    securityContext:
                        privileged: true # rootless暂时不支持containerd
                    ports:
                        -   containerPort: 11234
                    args:
                        -   --addr
                        -   unix:///run/buildkit/buildkitd.sock
                        -   --addr
                        -   tcp://0.0.0.0:11234
                        -   --config
                        -   /etc/buildkit/buildkitd.toml
                    readinessProbe: 
                        exec:
                            command:
                                -   buildctl
                                -   debug
                                -   workers
                        initialDelaySeconds: 5
                        periodSeconds: 30
                    livenessProbe: 
                        exec:
                            command:
                                -   buildctl
                                -   debug
                                -   workers
                        initialDelaySeconds: 5
                        periodSeconds: 30
                    volumeMounts:
                        -   name: localtime
                            mountPath: /etc/localtime
                            readOnly: true
                        -   name: buildkitd-toml
                            mountPath: /etc/buildkit/buildkitd.toml
                            subPath: buildkitd.toml
                    resources:
                        limits:
                            cpu: "1"  
                            memory: 2Gi  
                        requests:
                            cpu: "1"
                            memory: 2Gi
            volumes:
                -   name: jenkins-data
                    persistentVolumeClaim:
                        claimName: nfs-pvc-jenkins
                -   name: buildkitd-toml
                    configMap:
                        name: buildkitd.toml
                -   name: docker
                    hostPath:
                        path: /run/docker.sock
                        type: ''
                -   name: localtime
                    hostPath:
                        path: /etc/localtime
    strategy:
        type: RollingUpdate
        rollingUpdate: 
            maxUnavailable: 1
            maxSurge: 1
    revisionHistoryLimit: 10
    progressDeadlineSeconds: 600

# ---
# apiVersion: v1
# kind: Service
# metadata:
#     namespace: infra
#     name: jenkins   
#     labels:        
#         app: jenkins   
# spec:        
#     selector:      
#         app: jenkins   
#     ports:
#         -   name: http    
#             protocol: TCP        
#             port: 80              #Svc 的端口
#             targetPort: 8080      #Pod 的端口
#     type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
    namespace: infra
    name: jenkins   
    labels:        
        app: jenkins   
spec: 
    # type: NodePort
    selector:      
        app: jenkins   
    ports:
        -   name: jenkins    
            protocol: TCP        
            port: 80              #Svc 的端口
            targetPort: 8080      #Pod 的端口
            #nodePort: 31080
        # 仅测试环境 buildctl  --addr tcp://infra.fusjb.io:11234
        -   name: buildkitd    
            port: 11234
            targetPort: 11234

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata: 
    namespace: infra
    name: jenkins
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        -   host: infra.fusjb.io
            http:
                paths:
                    -   path: /
                        pathType: Prefix
                        backend: 
                            service: 
                                name: jenkins
                                port: 
                                    number: 80
                

# 代理端口
# curl infra.fusjb.io:10180
# kubectl delete ConfigMap tcp-services -n ingress-nginx
