k8s/yml/ns-dev-web.yaml
# 开发空间，互联网区
#
apiVersion: v1
kind: Namespace
metadata:         
    name: ns-dev-web

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:         
    namespace: ns-dev-web
    name: default-deny2
spec:            
    podSelector: 
        matchLabels: {}
    policyTypes:
        - Ingress
        - Egress
    ingress: # 入白名单，以下任一
        -   from:
                -   namespaceSelector:
                        matchLabels: 
                            project: myproject
                -   podSelector:
                        matchLabels:
                            app: tomcat
                -   ipBlock:
                        cidr: 172.20.0.0/16
                        except:
                            - 172.20.1.0/24
            ports:
                -   protocol: TCP
                    port: 80
        -   from:
                -   namespaceSelector:
                        matchLabels: 
                            project: db
                -   podSelector:
                        matchLabels:
                            role: frontend
                -   ipBlock:
                        cidr: 172.20.0.0/16
                        except:
                            - 172.20.3.0/24
            ports:
                -   protocol: TCP
                    port: 443

    egress:
        - {} # 出白名单，允许所有

---
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: ns-dev-web 
    name: nginx-demo-deployment 
    labels: 
        app: nginx 
spec:           
    replicas: 3    
    selector:      
        matchLabels:  
            app: nginx
    template:     #这是选择或创建的Pod的模板
        metadata:   #Pod的元数据
            labels:   #Pod的标签，上面的selector即选择包含标签app:nginx的Pod
                app: nginx
        spec:       #期望Pod实现的功能（即在pod中部署）
            containers:   #生成container，与docker中的container是同一种
                -   name: nginx #container的名称
                    image: nginx:1.18-alpine  #使用镜像nginx:1.18创建container，该container默认80端口可访问
                    imagePullPolicy: IfNotPresent #先本地，若无再下载
                    ports:
                        -   name: http
                            containerPort: 80
                        -   name: http2
                            containerPort: 443
                    volumeMounts:
                        -   mountPath: /etc/nginx/nginx.conf
                            name: nginx-config # 使用下面的配置覆盖默认配置
                            subPath: nginx.conf
                        -   mountPath: /var/www/test
                            name: pv1
                    resources:
                        limits:
                            cpu: 50m  
                            memory: 512Mi  
                        requests:
                            cpu: 25m
                            memory: 256Mi
            volumes:
                -   name: nginx-config
                    configMap:
                        name: nginx.cm
                -   name: pv1
                    persistentVolumeClaim:
                        claimName: pvc1

---
apiVersion: v1
kind: Service
metadata:
    namespace: ns-dev-web 
    name: nginx-demo-service   
    labels:        
        app: nginx   
spec:        
    selector:      
        app: nginx   
    ports:
        -   name: http-nginx    
            protocol: TCP        
            port: 80            #Svc 的端口
            targetPort: 80      #Pod 的端口
        -   name: http2-nginx    
            protocol: TCP        
            port: 443            #Svc 的端口
            targetPort: 443      #Pod 的端口
    type: ClusterIP

#
# useage
# 
# kubectl delete ns ns-dev-web
# kubectl create -f ns-dev-web.yaml
#
# kubectl describe limitrange/limit-mem-cpu-per-pod -n ns-dev-web
#
# kubectl get resourcequota mem-cpu -n ns-dev-web -o yaml

# kubectl describe nodes k8s-m1

# kubectl describe svc/nginx-demo-service   -n ns-dev-web


# kubectl get pod -A -o wide

# kubectl exec -it nginx-demo-deployment-85574c8749-nw456  -n ns-dev-web -- sh
#
# kubectl run -n ns-dev-web busybox-test --rm -ti --image busybox --requests 'cpu=100m,memory=512Mi' --limits 'cpu=200m,memory=512Mi' -- /bin/sh 
# wget -q --timeout=5 nginx-demo-service -O -
# wget -q -T 2 -O - nginx-demo-deployment 
# wget -q -T 2 -O - 172.16.1.153:443
